testing out excerpt option

--- a/_posts/2014-5-21-test.md
+++ b/_posts/2014-5-21-test.md
@@ -11,6 +11,8 @@ An inyo can be called with a single line in the shell... but if your html is any
 * a "JXA" file that defines the application to call, the method and any associated options/parameters.
 * the `osascript` shell command which will execute the javascript (JXA) file.
 
+<!--more-->
+
 ### The shell command
 
 `osascript -l JavaScript ~/projects/inyos/execclick.js`  `osascript` executes the listed file using the `-l JavaScript` option indicating JXA for AppleScript.
