updated _config with redcarpet extensions - specifically for tables

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -9,15 +9,15 @@ published: True
 
 ## Hot Keys
 
-|cmd | category | description|
-|----|----|-----|
-|`capslock` | misc | iTerm|
-|`cmd+capslock` | misc | Path Finder|
-|`opt+cmd+space` | misc | Sublime|
-|`shift+capslock` | misc | Evernote|
-|`left_opt` | misc | Messages|
-|`left_cmd` | misc | Slack|
-|`opt-r` | misc | help file|
+|shortcut | application|
+|-------------------|---------------|
+|`capslock`| iTerm|
+|`cmd+capslock`| Path Finder|
+|`opt+cmd+space`| Sublime|
+|`shift+capslock`| Evernote|
+|`left_opt`| Messages|
+|`left_cmd`| Slack|
+|`opt-r`| help file|
 
 I like to keep my hands on the keyboard as much as possible. To that end, I have created a bunch of shortcuts that I now have ingrained for quick navigation between my common apps. There are lots of apps you can use to create hotkeys - Keyboard Maestro, Alfred, BetterTouchTool, etc (I use all three of the previous apps for specific things in my franken'mation - better than ruben'mation). Key in my setup, though, is Seil. Seil lets you remap any key to another key.
 
