updating hot_keys.md

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -9,27 +9,25 @@ published: True
 
 ## Hot Keys
 
-|shortcut | application|
-|-------------------|---------------|
+|shortcut | app|
+|---------------------|---------------|
 |`capslock`| iTerm|
 |`cmd+capslock`| Path Finder|
-|`opt+cmd+space`| Sublime|
+|`cmd+opt+space`| Sublime|
 |`shift+capslock`| Evernote|
-|`left_opt`| Messages|
-|`left_cmd`| Slack|
-|`opt-r`| help file|
+|`opt_left`| Messages|
+|`cmd_left`| Slack|
+<!-- |`opt-r`| help file| -->
 
-I like to keep my hands on the keyboard as much as possible. To that end, I have created a bunch of shortcuts that I now have ingrained for quick navigation between my common apps. There are lots of apps you can use to create hotkeys - Keyboard Maestro, Alfred, BetterTouchTool, etc (I use all three of the previous apps for specific things in my franken'mation - better than ruben'mation). Key in my setup, though, is Seil. Seil lets you remap any key to another key.
+I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation between my common apps. There are lots of apps to create hotkeys - Keyboard Maestro, Alfred, BetterTouchTool, etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, Seil is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use.
 
-Seil allows you to remap keyboard keys. There are three keys that I bet you don't use much that you can snag to use as hot keys, directly or in combination, that will allow you to create tons of easy shortcuts (global or app specific). Those keys are
-
-### caps lock - remapped to F19 (80)
+`caps lock` - remapped to F19 (80)
 Does anyone use this anymore? No brainer to repurpose.
 
-### right command - remapped to F17 (64)
+`cmd_right` - remapped to F17 (64)
 Over time, I realized that the ONLY time I ever used the right command key was to as keyboard shortcut to delete a file in finder (and only when I was mousing around with external mouse and had one hand on the keyboard - because it is impossible to stretch from the left command to the delete key with one hand). An edge case to be sure. So, why not grab this key as well.
 
-### right option - remapped to F18 (79)
+`option_right` - remapped to F18 (79)
 I can't think of any circumstance where I used this key. Likely doing nothing, repurpose it!
 
 ## How to use them
