--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -22,6 +22,12 @@ published: True
 
 I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation between my common apps. There are lots of apps to create hotkeys - Keyboard Maestro, Alfred, BetterTouchTool, etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, Seil is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use.
 
+### Using Seil and Keyboard Maestro to setup shortcuts
+
+1. Remap unused keys to Function Keys above F12 (OSX supports F1 thru F19, however, Mac keyboards stop at F12)
+
+![image](https://cloud.githubusercontent.com/assets/12622205/7895643/9fa2d7c8-0667-11e5-9f44-4f3ac9d9bfd9.png)
+
 `caps lock` - remapped to F19 (80)
 Does anyone use this anymore? No brainer to repurpose.
 
@@ -31,8 +37,10 @@ Over time, I realized that the ONLY time I ever used the right command key was t
 `option_right` - remapped to F18 (79)
 I can't think of any circumstance where I used this key. Likely doing nothing, repurpose it!
 
-## How to use them
-Two steps. Remap them to Function Keys above F12 (which aren't on the normal Mac keyboard) and assign shortcuts with an application like Keyboard Maestro. First the remap. OSX supports F1 thru F19, however, Mac keyboards stop at F12 - reassign to these "hidden" F keys. Suggested reassignments (key - keycode (F key value).
+
+2. Assign shortcuts in Keyboard Maestro. First the remap.
+
+![image](https://cloud.githubusercontent.com/assets/12622205/7895639/78b57328-0667-11e5-9e09-42d7ca2f1bea.png)
 
 
 
