updating hot_keys.md

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -9,7 +9,7 @@ published: True
 
 ## Hot Keys
 
-|shortcut | app|
+|**shortcut** | **app**|
 |---------------------|---------------|
 |`capslock`| iTerm|
 |`cmd+capslock`| Path Finder|
@@ -20,13 +20,15 @@ published: True
 
 <!-- |`opt-r`| help file| -->
 
-I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation between my common apps. There are lots of apps to create hotkeys - Keyboard Maestro, Alfred, BetterTouchTool, etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, Seil is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use.
+I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation between my common apps. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/, etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use.
 
 ### Using Seil and Keyboard Maestro to setup shortcuts
 
 1. Remap unused keys to Function Keys above F12 (OSX supports F1 thru F19, however, Mac keyboards stop at F12)
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895643/9fa2d7c8-0667-11e5-9f44-4f3ac9d9bfd9.png)
+
+Suggestions:
 
 `caps lock` - remapped to F19 (80)
 Does anyone use this anymore? No brainer to repurpose.
@@ -38,7 +40,7 @@ Over time, I realized that the ONLY time I ever used the right command key was t
 I can't think of any circumstance where I used this key. Likely doing nothing, repurpose it!
 
 
-2. Assign shortcuts in Keyboard Maestro. First the remap.
+2. Assign shortcuts in Keyboard Maestro.
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895639/78b57328-0667-11e5-9e09-42d7ca2f1bea.png)
 
