--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -7,8 +7,6 @@ published: True
 
 ---
 
-## Hot Keys
-
 |**shortcut** | **app**|
 |---------------------|---------------|
 |`capslock`| iTerm|
@@ -20,7 +18,7 @@ published: True
 
 <!-- |`opt-r`| help file| -->
 
-I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation between my common apps. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/, etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use.
+I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use.
 
 ### Using Seil and Keyboard Maestro to setup shortcuts
 
@@ -31,9 +29,10 @@ I like to keep my hands on the keyboard. To that end, I have a bunch of shortcut
 Suggestions:
 
 `caps lock` - remapped to F19 (80)
+
 Does anyone use this anymore? No brainer to repurpose.
 
-`cmd_right` - remapped to F17 (64)
+`cmd_right` - remapped to F17 (64)<br>
 Over time, I realized that the ONLY time I ever used the right command key was to as keyboard shortcut to delete a file in finder (and only when I was mousing around with external mouse and had one hand on the keyboard - because it is impossible to stretch from the left command to the delete key with one hand). An edge case to be sure. So, why not grab this key as well.
 
 `option_right` - remapped to F18 (79)
