updating hot_keys.md

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -28,13 +28,13 @@ I like to keep my hands on the keyboard. To that end, I have a bunch of shortcut
 
 Suggestions:
 
-`caps lock` - remapped to F19 (80)<br>
+`caps lock` remapped to `F19 (80)`<br>
 Does anyone use this anymore? No brainer to repurpose.
 
-`cmd_right` - remapped to F17 (64)<br>
+`cmd_right` remapped to `F17 (64)`<br>
 Over time, I realized that the ONLY time I ever used the right command key was to as keyboard shortcut to delete a file in finder (and only when I was mousing around with external mouse and had one hand on the keyboard - because it is impossible to stretch from the left command to the delete key with one hand). An edge case to be sure. So, why not grab this key as well.
 
-`option_right` - remapped to F18 (79)<br>
+`option_right` remapped to `F18 (79)`<br>
 I can't think of any circumstance where I used this key. Likely doing nothing, repurpose it!
 
 
