updating hot_keys.md

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -20,9 +20,9 @@ published: True
 
 I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use.
 
-### Using Seil and Keyboard Maestro to setup shortcuts
+### Use Seil and Keyboard Maestro to setup shortcuts
 
-1. Remap unused keys to Function Keys above F12 (OSX supports F1 thru F19, however, Mac keyboards stop at F12)
+#### Remap unused keys to Function Keys above F12 (OSX supports F1 thru F19, however, Mac keyboards stop at F12)
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895643/9fa2d7c8-0667-11e5-9f44-4f3ac9d9bfd9.png)
 
@@ -32,13 +32,13 @@ Suggestions:
 Does anyone use this anymore? No brainer to repurpose.
 
 `cmd_right` remapped to `F17 (64)`<br>
-Over time, I realized that the ONLY time I ever used the right command key was to as keyboard shortcut to delete a file in finder (and only when I was mousing around with external mouse and had one hand on the keyboard - because it is impossible to stretch from the left command to the delete key with one hand). An edge case to be sure. So, why not grab this key as well.
+The ONLY time I ever used this was when I needed to hit `cmd+del` with my left hand because I had an external mouse in my right. An edge case to be sure, repurpose it!
 
 `option_right` remapped to `F18 (79)`<br>
 I can't think of any circumstance where I used this key. Likely doing nothing, repurpose it!
 
 
-2. Assign shortcuts in Keyboard Maestro.
+#### Assign shortcuts in Keyboard Maestro.
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895639/78b57328-0667-11e5-9e09-42d7ca2f1bea.png)
 
