updating hot key article

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -1,13 +1,15 @@
 ---
 layout: post
-title: hot keys
+title: Hot Keys
 categories: []
 tags: []
 published: True
 
 ---
 
-|**shortcut** | **app**|
+![image](https://cloud.githubusercontent.com/assets/12622205/7895860/d776ae68-0671-11e5-83bb-b6c29a97d6b5.png)
+
+|**hotkey** | **app**|
 |---------------------|---------------|
 |`capslock`| iTerm|
 |`cmd+capslock`| Path Finder|
