updating hot key article

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -9,16 +9,17 @@ published: True
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895860/d776ae68-0671-11e5-83bb-b6c29a97d6b5.png)
 
-I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use `caps lock`, `opt (left)` and `cmd (left)`.
+I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use `caps lock`, `opt(left)` and `cmd(left)`.
 
 |**hotkey** | **app**|
 |---------------------|---------------|
 |`capslock`| iTerm|
-|`cmd+capslock`| Path Finder|
-|`cmd+opt+space`| Sublime|
+|`cmd(r)+capslock`| Path Finder|
 |`shift+capslock`| Evernote|
-|`opt_left`| Messages|
-|`cmd_left`| Slack|
+|`opt(l)`| Messages|
+|`cmd(l)`| Slack|
+|`cmd(r)+opt(r)+space`| Sublime|
+
 
 <!-- |`opt-r`| help file| -->
 
