--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -11,6 +11,8 @@ published: True
 
 I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use `caps lock`, `opt(left)` and `cmd(left)`.
 
+#### My Shortcuts
+
 |**hotkey** | **app**|
 |---------------------|---------------|
 |`capslock`| iTerm|
