--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -9,7 +9,7 @@ published: True
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895860/d776ae68-0671-11e5-83bb-b6c29a97d6b5.png)
 
-I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (I use those three for specific things in my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use `caps lock`, `opt(left)` and `cmd(left)`.
+I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (those three are a part of my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use `caps lock`, `opt(left)` and `cmd(left)`. Remapping these specific keys in shortcuts means less chance of tromping over some already defined system or app specific shortcut.
 
 #### My Shortcuts
 
@@ -27,7 +27,9 @@ I like to keep my hands on the keyboard. To that end, I have a bunch of shortcut
 
 ### Use Seil and Keyboard Maestro to setup shortcuts
 
-#### Remap unused keys to Function Keys above F12 (OSX supports F1 thru F19, however, Mac keyboards stop at F12)
+#### In Seil
+
+Remap unused keys to Function Keys above F12 (OSX supports F1 thru F19, however, Mac keyboards stop at F12)
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895643/9fa2d7c8-0667-11e5-9f44-4f3ac9d9bfd9.png)
 
@@ -43,7 +45,9 @@ The ONLY time I ever used this was when I needed to hit `cmd+del` with my left h
 I can't think of any circumstance where I used this key. Likely doing nothing, repurpose it!
 
 
-#### Assign shortcuts in Keyboard Maestro.
+#### In Keyboard Maestro
+
+Create a macro associating a hot key with an action. Sky's the limit here. The hot key can active an app (as I have above) or any action you choose.
 
 ![image](https://cloud.githubusercontent.com/assets/12622205/7895639/78b57328-0667-11e5-9e09-42d7ca2f1bea.png)
 
