lots of updates

--- a/_posts/2015-05-30-hot-keys.md
+++ b/_posts/2015-05-30-hot-keys.md
@@ -11,6 +11,8 @@ published: True
 
 I like to keep my hands on the keyboard. To that end, I have a bunch of shortcuts for quick navigation. There are lots of apps to create hotkeys - [Keyboard Maestro](http://www.keyboardmaestro.com/main/), [Alfred](http://www.alfredapp.com/), [BetterTouchTool](http://www.bettertouchtool.net/), etc (those three are a part of my franken'mation (better than rube'n'mation)). In my setup, [Seil](https://pqrs.org/osx/karabiner/seil.html.en) is key (no pun). Seil lets you remap any key to another key. There are three keys that I never/rarely use `caps lock`, `opt(left)` and `cmd(left)`. Remapping these specific keys in new hot keys means less chance of tromping over some already defined system or app specific hot key.
 
+<!--more-->
+
 #### My Shortcuts
 
 |**hotkey** | **app**|
